# rofi-edit

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: item.rs  lib.rs  mode_logic.rs
