[package]
name = "rofi-edit"
version = "0.1.0"
edition = "2021"
description = "A plugin for rofi that allows list editing"
authors = ["DavidOnTop <me@davidon.top>"]
readme = "README.md"
license = "GPL-3.0"
repository = "git@github.com:davidon-top/rofi-edit.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
rofi-mode = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
